first version with create and get sensor data
